--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,14 @@ h3 {
     background-color: yellowgreen;
 }
 
+section:nth-of-type(1) {
+    text-align: center;
+}
+
+section:nth-of-type(1) button {
+    text-align: center;
+}
+
 section:nth-of-type(2) .rechteck {
     height: 40px;
     width: 40px;
